# Projects

Group Project - Image processing library applied to fingerprints/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  doxy-convert.conf  post_proc_cmplx.py  test
Group Project - Image processing library applied to fingerprints/complexity_graphs/: DFT_convolve.txt  convo_compare.txt  fft.txt
Group Project - Image processing library applied to fingerprints/include/: Dictionary.h  Histogram.h  Image.h  Mask.h  Matrix.hpp  Pixel.h  PixelCoordinates.h  Rotation.h  Scaling.h  Shear.h  Transformation.h  Translation.h  inpainting.h  local_warp.h  main_1_simulation.h  transform.h
Group Project - Image processing library applied to fingerprints/src/: Dictionary.cpp  Histogram.cpp  Image.cpp  Mask.cpp  Pixel.cpp  PixelCoordinates.cpp  Rotation.cpp  Scaling.cpp  Shear.cpp  Transformation.cpp  Translation.cpp  general_main.cpp  inpainting.cpp  local_warp.cpp  main3.cpp  main_1_simulation.cpp  main_starter3_downward_blur.cpp  transform.cpp  utils.cpp
Group Project - Volcano with openGL and GLSL/Volcano/: animation.py  core.py  texture.py  transform.py  viewer.py  volcano.frag  volcano.vert
Group Project - Volcano with openGL and GLSL/Volcano/skybox/: cube.mtl
Project - Ray Marching and Shadow Marching/: fragment_shader01.fs  viewer.py
Statistical learning/: TPComplementary.Rmd  TPComplementary.html
